# vnbb

./: .gitignore  CHANGELOG.md  README.md  llms.txt  main.py  pyproject.toml  requirements.txt
app/: __init__.py  bootstrap.py  controller.py
app/models/: __init__.py  market_data.py
app/renderers/: __init__.py  candlestick_chart_renderer.py
app/services/: __init__.py  quote_service.py
app/ui/: __init__.py  layout.py  prompts.py
tests/: test_controller.py  test_layout.py  test_models.py  test_quote_service.py  test_renderers.py
